--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel "stylesheet" href="style.css">
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta charset=" UTF-8">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Howdy!</h1>
+    <div class="border-all">
+        <header class="header"> header</header>
+
+        <nav class="nav">nav</nav>
+
+        <section class="section">section
+            <article class="article">article
+                <h3 class="heading">h1,h2,h3</h3>
+                <p>p</p>
+            </article>
+            <div></div>
+        </section>
+        <aside class="aside">aside</aside>
+        <div class="clear">
+            
+        </div><footer>footer</footer>
+
+
+
     </div>
 </body>
+
 </html>
